# DeepLearning

./: .gitignore  PikaPikaTraining.ipynb  README.md  Totally not es es eich.ipynb  dataset.py  download_dataset.py  instructions.md  lezioneUNet.py  note.md  pyproject.toml  test_dataset.py  training.py
old_notebooks/: BasePikaPikaGAN_Training.ipynb
pikapikagen/: PikaPikaGen.ipynb  README.md  analyze_checkpoint.py  analyze_model.py  augment.py  clean_checkpoints.py  clip_loss.py  data_loader.py  dataset.py  discriminator.py  discriminators.py  download_dataset.py  evaluate_kid.py  gradio_demo.py  losses.py  main.py  model.py  plots.py  pokemon_dataset.py  test_augmentations.py  test_dataset.py  training.py  utils.py
pikapikagen/model_blocks/: decoder_block.py  image_cross_attention.py  image_decoder.py  text_encoder.py
pikapikagen/model_checkpoint/: checkpoint_epoch_150.pth
