[project]
name = "pikapikagen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.35.0",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "sentence-transformers>=5.0.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.53.0",
]
